[gd_scene load_steps=19 format=2]

[ext_resource path="res://script/1.2.1.gd" type="Script" id=1]
[ext_resource path="res://fonts/font2.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/Chinese.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/font3.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/font1.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/style重新註冊.tres" type="StyleBox" id=6]
[ext_resource path="res://pic/bg.jpg" type="Texture" id=7]
[ext_resource path="res://pic/google.png" type="Texture" id=8]
[ext_resource path="res://fonts/font4.tres" type="DynamicFont" id=9]
[ext_resource path="res://fonts/選角.tres" type="StyleBox" id=10]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.886275, 0.941176, 0.933333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 10.0
content_margin_top = 3.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_top = 3.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0941176, 0.815686, 0.909804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0941176, 0.815686, 0.909804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.917647, 1, 0.356863, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.917647, 1, 0.356863, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.87451, 0.796078, 0.796078, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
texture = ExtResource( 7 )

[node name="底色2" type="Panel" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -649.5
margin_top = -371.0
margin_right = 649.5
margin_bottom = 371.0
custom_styles/panel = SubResource( 8 )

[node name="google" type="Button" parent="bg/底色2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -322.0
margin_top = -331.0
margin_right = 322.0
margin_bottom = -157.0
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
icon = ExtResource( 8 )
flat = true

[node name="姓名" type="Label" parent="bg/底色2"]
margin_left = 100.0
margin_top = 230.0
margin_right = 280.0
margin_bottom = 308.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "姓名："

[node name="UserName" type="LineEdit" parent="bg/底色2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -369.5
margin_top = -141.0
margin_right = -69.5
margin_bottom = -61.0
custom_colors/font_color = Color( 0.854902, 0.8, 0.8, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "User Name"
placeholder_alpha = 1.0

[node name="密碼" type="Label" parent="bg/底色2"]
margin_left = 100.0
margin_top = 350.0
margin_right = 280.0
margin_bottom = 428.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "密碼："

[node name="Password" type="LineEdit" parent="bg/底色2"]
margin_left = 280.0
margin_top = 350.0
margin_right = 580.0
margin_bottom = 430.0
custom_colors/font_color = Color( 0.854902, 0.8, 0.8, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "Password"
placeholder_alpha = 1.0

[node name="學校" type="Label" parent="bg/底色2"]
margin_left = 100.0
margin_top = 470.0
margin_right = 280.0
margin_bottom = 548.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "學校："

[node name="School" type="LineEdit" parent="bg/底色2"]
margin_left = 280.0
margin_top = 470.0
margin_right = 580.0
margin_bottom = 550.0
custom_colors/font_color = Color( 0.854902, 0.8, 0.8, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "School"
placeholder_alpha = 1.0

[node name="生日" type="Label" parent="bg/底色2"]
margin_left = 720.0
margin_top = 230.0
margin_right = 900.0
margin_bottom = 308.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "生日："

[node name="Birth" type="LineEdit" parent="bg/底色2"]
margin_left = 900.0
margin_top = 230.0
margin_right = 1200.0
margin_bottom = 310.0
custom_colors/font_color = Color( 0.854902, 0.8, 0.8, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
expand_to_text_length = true
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "YYYY/MM/DD"
placeholder_alpha = 1.0

[node name="信箱" type="Label" parent="bg/底色2"]
margin_left = 720.0
margin_top = 350.0
margin_right = 900.0
margin_bottom = 428.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "信箱："

[node name="Mail" type="LineEdit" parent="bg/底色2"]
margin_left = 900.0
margin_top = 350.0
margin_right = 1200.0
margin_bottom = 430.0
custom_colors/font_color = Color( 0.854902, 0.8, 0.8, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "Gmail"
placeholder_alpha = 1.0

[node name="電話" type="Label" parent="bg/底色2"]
margin_left = 720.0
margin_top = 470.0
margin_right = 900.0
margin_bottom = 548.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "電話："

[node name="Phone" type="LineEdit" parent="bg/底色2"]
margin_left = 900.0
margin_top = 470.0
margin_right = 1200.0
margin_bottom = 550.0
custom_colors/font_color = Color( 0.854902, 0.8, 0.8, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
expand_to_text_length = true
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "Phone"
placeholder_alpha = 1.0

[node name="button_p" type="Button" parent="bg/底色2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -579.0
margin_top = -142.0
margin_right = -359.0
margin_bottom = -62.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
text = "已有帳號"

[node name="button_e" type="Button" parent="bg/底色2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -289.5
margin_top = 229.0
margin_right = -69.5
margin_bottom = 309.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
text = "進入遊戲"

[node name="choose" type="Button" parent="bg/底色2"]
margin_left = 600.0
margin_top = 245.0
margin_right = 672.0
margin_bottom = 281.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 10 )
text = "選角"

[node name="login" type="Label" parent="bg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = 69.0
margin_right = 250.0
margin_bottom = 214.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 12 )
text = "註冊"
align = 1
valign = 1
uppercase = true

[connection signal="pressed" from="bg/底色2/button_p" to="." method="_on_button_p_pressed"]
[connection signal="pressed" from="bg/底色2/button_e" to="." method="_on_button_e_pressed"]
[connection signal="pressed" from="bg/底色2/choose" to="." method="_on_choose_pressed"]
